add Set Allocation panel does
